--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <h2>Available Packages</h2>
   <ul>
     <li><a href="pool/main/l/libc6/libc6.deb">libc6.deb</a></li>
+    <li><a href="pool/main/l/linux/linux-headers-6.12.21_6.12.21-5_amd64.deb">linux-headers-6.12.21_6.12.21-5_amd64.deb</a></li>
+    <li><a href="pool/main/l/linux/linux-image-6.12.21_6.12.21-5_amd64.deb">linux-image-6.12.21_6.12.21-5_amd64.deb</a></li>
+    <li><a href="pool/main/l/linux/linux-libc-dev_6.12.21-5_amd64.deb">linux-libc-dev_6.12.21-5_amd64.deb</a></li>
   </ul>
 
   <hr />
